<resources>
    <string name="app_name">SuitmediaApp</string>
    <string name="add_image_icon">add image icon</string>
    <string name="name">Name</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="palindrome">Palindrome</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="no_users_found">No Users Found</string>
</resources>