<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"  />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_photo"
                android:contentDescription="@string/add_image_icon" />
        </FrameLayout>

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/light_grey"
            android:background="@drawable/custom_input"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/edPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="45dp"
            android:hint="@string/palindrome"
            android:textColorHint="@color/light_grey"
            android:background="@drawable/custom_input"
            android:autofillHints=""
            android:inputType="text" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/check"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:autofillHints="" />
  </LinearLayout>



  </androidx.constraintlayout.widget.ConstraintLayout>